# PatMat

./: README.md  env.yaml  env.yml  install.sh  patmat_env.yml  patmat_workflow.nf  pyproject.toml
Strand-seq/: env.yml  hanlon_2021_BMCgenomics_augmented.GRCh38.bed  hanlon_2021_BMCgenomics_augmented.LiftedOverToT2T-CHM13v2Hs1.bed  hanlon_2021_BMCgenomics_augmented.Merged.GRCh38.bed  hanlon_2021_BMCgenomics_augmented.T2T-CHM13v2Hs1.bed  hanlon_2021_BMCgenomics_augmented.bed  hard_mask.GRCh38.bed  hard_mask.LiftedOverToT2T-CHM13v2Hs1.bed  hard_mask.T2T-CHM13v2Hs1.bed  soft_mask.GRCh38.bed  soft_mask.LiftedOverToT2T-CHM13v2Hs1.bed  soft_mask.T2T-CHM13v2Hs1.bed  strandseq_phase.R
docs/: Imprinted_DMR_List_V1.0.tsv
patmat/: DMA_UsingDSS.R  Imprinted_DMR_List_V1.LiftedOverToT2T-CHM13v2Hs1.tsv  Imprinted_DMR_List_V1.T2T-CHM13v2Hs1.tsv  Imprinted_DMR_List_V1.tsv  PatMat.py  __main__.py  cli.py  env.yml  patmat.py
patmat/core/: allele_processing.py  haplotype.py  methylation.py  phase_processing.py  subprocess_calls.py  variant_assignment.py  variant_processing.py
patmat/io/: bam.py  file_utils.py  vcf.py  write.py
scripts/: WCCW_list.sh  WCCW_merge.sh  blacklist.highdepth.centromeres.bed  blacklist.highdepth.centromeres.with_chr8_inv.bed  bpr_simple.R  env.yml  extract_bpr.R  master.sh  master_WCCW_composite.sh  master_WWCC_composite.sh  printWCCWregions.R  printWWCCregions.R  strandPhase.R
scripts/Strand-seq/: README  WWCC_merge.sh  bpr.R  inversion_phasing.R  runinv.bpr.R  runinv.catalogue.R  sup_table_24_inversions.including_half_intervals.bed
