[tool.poetry]
name = "patmat"
version = "1.4.0"
description = "Parent-of-origin (Paternal and Maternal) resolved chromosome-scale haplotyping"
authors = ["Vahid Akbari <vakbari@bcgsc.ca>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.0.0"
flake8 = "^6.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
patmat = "patmat.cli:main"
